# rag-testing

./: .dockerignore  .gitignore  README.md  docker-compose.dev.yml  docker-compose.yml
.cursor/rules/: general-guidelines.mdc
archwiki-scraper/: .gitignore  Taskfile.yml  go.mod  links_test.go  main.go  markdown.go  markdown_test.go  validate_links.go
archwiki-scraper/cmd/validate/: main.go
archwiki-scraper/testdata/: arch_linux.html
archwiki-scraper/validate/: main.go
frontend/: .prettierignore  Dockerfile  Dockerfile.dev  README.md  eslint.config.mjs  package.json
frontend/app/: layout.tsx  markdown.tsx  not-found.tsx  page.tsx
frontend/app/api/edit/: route.ts
frontend/app/api/transform/: route.ts
frontend/app/markdown/: page.tsx
frontend/app/markdown/[slug]/: page.tsx
frontend/app/markdown/folder/[folderName]/: page.tsx
frontend/app/markdown/folder/[folderName]/[slug]/: page.tsx
frontend/components/: ErrorDisplay.tsx  MarkdownLayout.tsx  MarkdownRenderer.tsx  NavigationLink.tsx
frontend/lib/: grpc-client.ts  markdown-utils.ts  types.ts
frontend/protos/: edit_service.proto  edit_service.ts
frontend/protos/edit/: EditRequest.ts  EditResponse.ts  EditService.ts
frontend/scripts/: generate-proto-types.js
llm-srv/: .dockerignore  .env.example  Dockerfile  Dockerfile.dev  README.md  pyproject.toml  server.py  test_client.py
llm-srv/llm_srv/: edit_service_pb2.py  edit_service_pb2_grpc.py  server.py
llm-srv/llm_srv/protos/: __init__.py  edit_service_pb2.py  edit_service_pb2_grpc.py
llm-srv/tests/: test_server.py
